--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,8 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#161616" /> <!-- 按钮背景色 -->
-    <stroke
-        android:width="1dp"
-        android:color="#3CE91ECE"   />   <!-- 边框颜色 -->
-    <corners android:radius="0dp" /> <!-- 圆角半径 -->
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape>
+            <solid android:color="#2D2D2D" /> <!-- 按下状态的背景色 -->
+            <stroke
+                android:width="1dp"
+                android:color="#3C414141" />   <!-- 按下状态的边框颜色 -->
+            <corners android:radius="0dp" /> <!-- 按下状态的圆角半径 -->
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <solid android:color="#161616" /> <!-- 正常状态的背景色 -->
+            <stroke
+                android:width="1dp"
+                android:color="#3C414141" />   <!-- 正常状态的边框颜色 -->
+            <corners android:radius="0dp" /> <!-- 正常状态的圆角半径 -->
+        </shape>
+    </item>
+</selector>
